# mranalyzer

./: .gitignore  .pre-commit-config.yaml  CHALLENGE.md  Doxyfile  README.md  pyproject.toml  setup.cfg
data/: 7500_data.csv  7500_labels.csv
docs/html/: annotated.html  classes.html  classutil_1_1_error_log_wrapper-members.html  classutil_1_1_error_log_wrapper.html  dir_a90e0278aab7489ba7686e86d06e26ac.html  functions.html  functions_func.html  index.html  menudata.js  namespacecli.html  namespacecorr.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaceseg.html  namespaceutil.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  functions_1.js  functions_2.js  functions_5.js  namespaces_0.js  namespaces_1.js  pages_0.js  searchdata.js  variables_0.js
mranalyzer/: cli.py  corr.py  seg.py  util.py
scripts/: segment_images.sh
tests/: test_end2end.py  test_seg.py  test_util.py
