# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = mranalyzer
version = 0.1.0
author = Colorado J Reed
author_email = colorado.j.reed@gmail.com
description = MRAnalyzer: A set of tools for mars rover analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cjrd/mr-analyzer
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
keywords = remote sensing, mars imagery, earth observation, geospatial, atmospheric

[options]
install_requires =
    # BSD 3-Clause License
    # click, version 8 needed for subcommands
    click >=8.0.0,<9.0.0

    # BSD 3-Clause License
    # pandas, version 1.3 needed for datetime64[ns] support
    pandas >=1.3.0,<2.0.0

    # MIT License
    # rich for logging, 12.5.0 for best compatibility with click
    rich >=12.5.0,<13.0.0

    # BSD 3-Clause License
    # numpy, version 1.21 needed for datetime64[ns] support
    numpy >=1.21.0,<2.0.0

    # BSD 3-Clause License
    # scipy, version 1.7 needed for datetime64[ns] support
    scipy >=1.7.0,<2.0.0

    # BSD 3-Clause License
    # skimage, version 0.18 needed for datetime64[ns] support
    scikit-image >=0.18.0,<0.20.0

    # BSD 3-Clause License
    # sklearn, version 1.0 needed for datetime64[ns] support
    scikit-learn >=1.0.0,<1.2.0

    # Matplotlib only uses BSD compatible code, and its license is based on the PSF license.
    # matplotlib, version 3.4 needed for datetime64[ns] support
    matplotlib >=3.4.0,<4.0.0

python_requires = ~= 3.8

packages = find:

[options.package_data]
mranalyzer = py.typed

[options.packages.find]
include = mranalyzer*

[options.extras_require]
style =
    # black 21.8+ required for Jupyter support
    black[jupyter]>=21.8,<23
    # flake8 3.8+ depends on pyflakes 2.2+, which fixes a bug with mypy error code ignores:
    # https://github.com/PyCQA/pyflakes/pull/455
    flake8>=3.8,<5
    # isort 5.8+ required for extend_skip option
    isort[colors]>=5.8,<6
    # pydocstyle 6.1+ required for pyproject.toml support
    pydocstyle[toml]>=6.1,<7
    # pyupgrade 1.24+ required for --py37-plus flag
    pyupgrade>=1.24,<3
tests =
    # mypy 0.900+ required for pyproject.toml support
    mypy>=0.900,<1.0
    # pytest 6.1.2+ required by nbmake
    pytest>=6.1.2,<8
    # pytest-cov 2.4+ required for pytest --cov flags
    pytest-cov>=2.4,<4

    # for mypy
    types-requests>=2.28.9,<2.30.0
    types-python-dateutil>=2.8.19,<2.9.0


[options.entry_points]
console_scripts = 
  mra=mranalyzer.cli:cli


[flake8]
max-line-length = 100
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    # Source
    data/,
    images
    logs/,
    output/,

    # Python
    build/,
    dist/,
    .cache/,
    .mypy_cache/,
    .pytest_cache/,
    __pycache__/,
    *.egg-info/,

    # Git
    .git/,
    .github/,